--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "jiff-mpc": "^1.0.0",
+    "mongodb": "^6.5.0",
     "path": "^0.12.7",
     "readline": "^1.3.0"
   }
